<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorFondoPersonalizado"
    android:padding="@dimen/margin_large">

    <TextView
        android:id="@+id/tv_score_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/score_completed_title"
        android:textColor="?attr/colorTextoPersonalizado"
        android:textSize="@dimen/text_title_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/score_card_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_score_title">

        <View
            android:id="@+id/score_shadow"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_shadow_button"
            android:translationX="@dimen/shadow_offset_medium"
            android:translationY="@dimen/shadow_offset_medium"
            app:layout_constraintBottom_toBottomOf="@id/container_score"
            app:layout_constraintEnd_toEndOf="@id/container_score"
            app:layout_constraintStart_toStartOf="@id/container_score"
            app:layout_constraintTop_toTopOf="@id/container_score" />

        <LinearLayout
            android:id="@+id/container_score"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_block_card"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/score_result_card_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="@dimen/score_label_letter_spacing"
                android:text="@string/score_label_caps"
                android:textColor="@color/gray_medium"
                android:textSize="@dimen/text_small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_big_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_zero"
                android:textColor="?attr/colorTextoPersonalizado"
                android:textSize="@dimen/text_score_big"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_accumulated"
                android:textColor="@color/gray_medium"
                android:textSize="@dimen/text_toolbar" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/img_victory_icon"
        android:layout_width="@dimen/victory_icon_size"
        android:layout_height="@dimen/victory_icon_size"
        android:src="@drawable/ic_imagen_score"
        android:contentDescription="@string/score_completed_title"
        app:layout_constraintBottom_toTopOf="@+id/footer_button_wrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_card_container" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer_button_wrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/main_button_height"
            android:layout_marginStart="@dimen/main_button_margin_horizontal"
            android:layout_marginEnd="@dimen/main_button_margin_horizontal"
            android:background="@drawable/bg_shadow_button"
            android:translationX="@dimen/shadow_offset_small"
            android:translationY="@dimen/shadow_offset_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_home"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_button_height"
            android:layout_marginStart="@dimen/main_button_margin_horizontal"
            android:layout_marginEnd="@dimen/main_button_margin_horizontal"
            android:text="@string/btn_go_home_caps"
            android:textAllCaps="false"
            android:textColor="?attr/colorTextoPersonalizado"
            android:textSize="@dimen/text_button_large"
            android:textStyle="bold"
            android:backgroundTint="@color/exercise_start_green"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="@dimen/main_button_radius"
            app:strokeColor="@color/neo_black"
            app:strokeWidth="@dimen/neo_stroke_width"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
